# cemircol

./: .gitignore  Cargo.toml  README.md  bench.cemir  benchmark.py  example.py  publish.sh  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: release.yml
cemircol/: __init__.py  converter.py
src/: lib.rs  reader.rs  writer.rs
