[package]
name = "cemircol"
version = "0.1.1"
edition = "2021"
description = "High-performance columnar storage with zlib compression. Parquet alternative."
license = "MIT"
readme = "README.md"
repository = "https://github.com/muslu/cemircol.git"

[lib]
name = "_cemircol"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
memmap2 = "0.9"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"